Modificado bd Dockerfile

--- a/mysql/Dockerfile
+++ b/mysql/Dockerfile
@@ -1,1 +1,5 @@
 FROM mariadb:latest
+
+COPY ./backups/schema.sql /var/lib/mysql
+
+RUN /usr/bin/mysql -u root --password=$MYSQL_ROOT_PASSWORD < /var/lib/mysql/schema.sql
