Modificado docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,13 +8,17 @@ services:
       - MYSQL_PASSWORD=admin
       - MYSQL_DATABASE=bookmedik
     volumes:
-      - ./mnt/mysql:/var/lib/mysql
+      - /mnt/mysql:/var/lib/mysql
 
   bookmedik:
     image: alvarobrod/bookmedik
     ports:
       - 80:80
+    environment:
+      - MYSQL_USER=admin
+      - MYSQL_PASSWORD=admin
+      - MYSQL_DATABASE=bookmedik
     volumes:
-      - ./mnt/logs:/var/log/apache2
+      - /mnt/logs:/var/log/apache2
     links:
       - mysql
